src/objects/Product__c.object
<CustomObject>
    <description>The products available in Customer Times online store.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <description>The producer of a product</description>
        <inlineHelpText>The producer of a product</inlineHelpText>
        <label>Brand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of a product</description>
        <inlineHelpText>Category of a product</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Universal</fullName>
                    <default>true</default>
                    <label>Universal</label>
                </value>
                <value>
                    <fullName>Game</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of a product</description>
        <inlineHelpText>Description of a product</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The price of a product</description>
        <inlineHelpText>The price of a product</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of a product</description>
        <inlineHelpText>The amount of a product</inlineHelpText>
        <label>Quantity</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HD (1.280 × 720)</fullName>
                </value>
                <value>
                    <fullName>WXGA (1.366 × 768)</fullName>
                </value>
                <value>
                    <fullName>Full HD (1.080 × 1.920)</fullName>
                </value>
                <value>
                    <fullName>UHD 4k (3.840 × 2.160)</fullName>
                </value>
                <value>
                    <fullName>QHD (2.560 × 1.440)</fullName>
                    <isActive>false</isActive>
                    <label>QHD (2.560 × 1.440)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screen_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Screen size of a product</description>
        <inlineHelpText>Diagonal screen size of a product in inches (&apos;&apos;)</inlineHelpText>
        <label>Screen Size</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>